cluster-cd/apps/chongus/media/jellyfin/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name jellyfin
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: media
    spec:
      replicas: 1
      runtimeClassName: nvidia
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 100
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.10.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 32Gi
              nvidia.com/gpu: 1
            requests:
              memory: 4Gi
              nvidia.com/gpu: 1
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8096
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
            - mountPath: /transcodes
              name: transcodes
            - mountPath: /cache
              name: cache
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin
        - name: cache
          emptyDir: {}
        - name: media
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media
        - name: transcodes
          emptyDir: {}
