cluster-cd/apps/chongus/media/jellyfin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name jellyfin
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
